src/test/ui/multiple-plugin-registrars.stderr
warning: use of deprecated attribute `plugin_registrar`: compiler plugins are deprecated. See https://github.com/rust-lang/rust/issues/29597
  --> $DIR/multiple-plugin-registrars.rs:6:1
   |
LL | #[plugin_registrar]
   | ^^^^^^^^^^^^^^^^^^^ help: remove this attribute
   |
   = note: `#[warn(deprecated)]` on by default

warning: use of deprecated attribute `plugin_registrar`: compiler plugins are deprecated. See https://github.com/rust-lang/rust/issues/29597
  --> $DIR/multiple-plugin-registrars.rs:9:1
   |
LL | #[plugin_registrar]
   | ^^^^^^^^^^^^^^^^^^^ help: remove this attribute

error: multiple plugin registration functions found
   |
note: one is here
  --> $DIR/multiple-plugin-registrars.rs:7:1
   |
LL | pub fn one() {}
   | ^^^^^^^^^^^^^^^
note: one is here
  --> $DIR/multiple-plugin-registrars.rs:10:1
   |
LL | pub fn two() {}
   | ^^^^^^^^^^^^^^^

error: aborting due to previous error

